# ai4sqlite3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ai4sqlite3/: __init__.py
sqlite3ai/: __init__.py
